--- a/forum.html
+++ b/forum.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Geheim | Wiesbaden-RP</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="Style.css">
 </head>
 <body>
   <header class="navbar">
@@ -25,3 +25,4 @@
   </main>
 </body>
 </html>
+
