--- a/regelwerk.html
+++ b/regelwerk.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Regelwerk | Wiesbaden-RP</title>
-  <link rel="stylesheet" href="style.css">
+ <link rel="stylesheet" href="Style.css">
   <script defer src="script.js"></script>
 </head>
 <body>
@@ -84,3 +84,4 @@
   </footer>
 </body>
 </html>
+
