--- a/index.html
+++ b/index.html
@@ -3,26 +3,26 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Wiesbaden-RP | Startseite</title>
+  <title>Emergency-Wiesbaden | Startseite</title>
   <link rel="stylesheet" href="Style.css">
 </head>
 <body>
   <header class="navbar">
     <div class="logo">
       <img src="assets/logo.webp" alt="Wiesbaden-RP Logo">
-      <span>Wiesbaden-RP</span>
+      <span>Emergency-Wiesbaden</span>
     </div>
     <nav>
       <a href="index.html" class="active">Start</a>
       <a href="bewerbung.html">Bewerbungen</a>
       <a href="regelwerk.html">Regelwerk</a>
       <a href="forum.html">Forum</a>
-      <a href="https://discord.gg/m9WrFk2DKS" target="_blank" class="discord-btn">Discord</a>
+      <a href="https://discord.gg/m9WrFk2DKS" target="_blank" class="discord-btn">Discord Link </a>
     </nav>
   </header>
   <section class="hero animated-bg">
     <div class="hero-content">
-      <h1 class="hero-title">Willkommen bei <span>Wiesbaden-RP</span></h1>
+      <h1 class="hero-title">Willkommen bei <span>Emergency-Wiesbaden</span></h1>
       <p class="hero-sub">Der modernste Roblox Roleplay Server inspiriert von der Stadt Wiesbaden.</p>
       <a href="bewerbung.html" class="btn">Jetzt Bewerben</a>
     </div>
@@ -61,4 +61,5 @@
   </footer>
 </body>
 </html>
+
 
