--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Emergency-Wiesbaden | Startseite</title>
+  <title>Emergency Wiesbaden | Startseite</title>
   <link rel="stylesheet" href="Style.css">
 </head>
 <body>
   <header class="navbar">
     <div class="logo">
       <img src="assets/logo.webp" alt="Wiesbaden-RP Logo">
-      <span>Emergency-Wiesbaden</span>
+      <span>Emergency Wiesbaden</span>
     </div>
     <nav>
       <a href="index.html" class="active">Start</a>
@@ -61,5 +61,6 @@
   </footer>
 </body>
 </html>
+
 
 
