--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </header>
   <section class="hero animated-bg">
     <div class="hero-content">
-      <h1 class="hero-title">Willkommen bei <span>Emergency-Wiesbaden</span></h1>
+      <h1 class="hero-title">Willkommen bei <span>Emergency Wiesbaden</span></h1>
       <p class="hero-sub">Der modernste Roblox Roleplay Server inspiriert von der Stadt Wiesbaden.</p>
       <a href="bewerbung.html" class="btn">Jetzt Bewerben</a>
     </div>
@@ -61,6 +61,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
