--- a/index.html
+++ b/index.html
@@ -54,6 +54,11 @@
         <img src="assets/EW_GFX_RS6.webp" alt="Anna Beispiel" class="team-img">
         <p class="role">Owner At EW</p>
       </div>
+  <div class="team-card slide-up">
+        <h3>Amo</h3>
+        <img src="assets/teamler1.png" alt="Amo" class="team-img">
+        <p class="role">Best Moderator OF The Week!</p>
+      </div>
     </div>
   </section>
   <footer>
@@ -61,6 +66,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
