--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   <div class="team-card slide-up">
         <h3>Amo</h3>
         <img src="assets/teamler1.png" alt="Amo" class="team-img">
-        <p class="role">Best Moderator OF The Week!</p>
+        <p class="role">Einfach Amo</p>
       </div>
     </div>
   </section>
@@ -66,6 +66,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
