--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       </div>
   <div class="team-card slide-up">
         <h3>Amo</h3>
-        <img src="assets/teamler1.png" alt="Amo" class="team-img">
+        <img src="assets/HI.webp" alt="Amo" class="team-img">
         <p class="role">Einfach Amo</p>
       </div>
     </div>
@@ -66,6 +66,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
