--- a/Datenschutz.html
+++ b/Datenschutz.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Datenschutz | Wiesbaden-RP</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="Style.css">
 </head>
 <body>
   <header class="navbar">
@@ -68,3 +68,4 @@
   </footer>
 </body>
 </html>
+
