--- a/impressum.html
+++ b/impressum.html
@@ -33,8 +33,10 @@
       <p><strong>Betreiber:</strong> Emergency Wiesbaden </p>
       <p><strong>Inhaber:</strong> Lenny Walt</p>
       <p><strong>Adresse:</strong> Ziesenißstraße 2, 22043 Hamburg </p>
-      <p><strong>Kontakt:</strong><br>
-        E-Mail: emergency.wiesbaden@gmx.de
+      <p><strong>Telefonummer:</strong><br>
+        +49 1738204261
+      <p><strong>E-mail:</strong><br>
+      emergency.wiesbaden@gmx.de
       </p>
 
       <h2 class="section-title">Haftung für Inhalte</h2>
@@ -58,4 +60,5 @@
   </footer>
 </body>
 </html>
+
 
