--- a/forum.html
+++ b/forum.html
@@ -3,26 +3,42 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Geheim | Wiesbaden-RP</title>
-  <link rel="stylesheet" href="Style.css">
+  <title>TikTok Feed | Wiesbaden-RP</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header class="navbar">
     <div class="logo">
-      <img src="assets/logo.webp" alt="Logo">
+      <img src="assets/logo.webp" alt="Wiesbaden-RP Logo">
       <span>Wiesbaden-RP</span>
     </div>
     <nav>
       <a href="index.html">Start</a>
       <a href="bewerbung.html">Bewerbungen</a>
       <a href="regelwerk.html">Regelwerk</a>
-      <a href="forum.html" class="active">Geheim</a>
+      <a href="tiktok.html" class="active">TikTok</a>
+      <a href="impressum.html">impressum</a>
     </nav>
   </header>
-  <main class="container fade-in">
-    <h1>Forum</h1>
-    <p>Hier könnte ein GEHEIMES-System eingebunden werden oder ein Link zu Discord.</p>
+
+  <section class="hero animated-bg">
+    <div class="hero-content">
+      <h1 class="hero-title">🎬 Unsere neuesten <span>TikToks</span></h1>
+      <p class="hero-sub">Hier seht ihr die neuesten Videos direkt vom Wiesbaden-RP TikTok-Kanal!</p>
+    </div>
+  </section>
+
+  <main class="container">
+    <section class="tiktok-section">
+      <h2 class="section-title">TikTok Feed</h2>
+      <script src="https://elfsightcdn.com/platform.js" async></script>
+      <div class="elfsight-app-00fab493-4571-42e1-a7bc-b9200c5061e6" data-elfsight-app-lazy></div>
+    </section>
   </main>
+
+  <footer>
+    <p>© 2025 Wiesbaden-RP | Made by <span class="lenny">Lenny</span></p>
+  </footer>
 </body>
 </html>
 
