--- a/index.html
+++ b/index.html
@@ -86,7 +86,8 @@
       <a href="index.html" class="active">Start</a>
       <a href="bewerbung.html">Bewerbungen</a>
       <a href="regelwerk.html">Regelwerk</a>
-      <a href="forum.html">Forum</a>
+      <a href="forum.html">Forum</a> 
+      <a href="status.html">Statisik</a>
       <a href="https://discord.gg/m9WrFk2DKS" target="_blank" class="discord-btn">Discord</a>
     </nav>
   </header>
