--- a/forum.html
+++ b/forum.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>TikTok Feed | Wiesbaden-RP</title>
-  <link rel="stylesheet" href="style.css">
+  <title>TikTok | Wiesbaden-RP</title>
+  <link rel="stylesheet" href="Style.css">
 </head>
 <body>
   <header class="navbar">
@@ -41,4 +41,5 @@
   </footer>
 </body>
 </html>
+
 
