--- a/bewerbung.html
+++ b/bewerbung.html
@@ -5,7 +5,54 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bewerbung | Wiesbaden-RP</title>
   <link rel="stylesheet" href="Style.css">
-  <script defer src="script.js"></script>
+  <style>
+    /* Overlay Hintergrund */
+    .overlay {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      backdrop-filter: blur(8px);
+      background: rgba(0,0,0,0.6);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      z-index: 9999;
+      color: #fff;
+      text-align: center;
+      padding: 20px;
+    }
+    .overlay-content {
+      background: rgba(20,20,20,0.9);
+      padding: 30px;
+      border-radius: 16px;
+      max-width: 500px;
+      width: 90%;
+      box-shadow: 0 0 20px rgba(0,0,0,0.5);
+    }
+    .overlay-content h2 {
+      margin-bottom: 15px;
+      font-size: 1.8rem;
+    }
+    .overlay-content p {
+      font-size: 1rem;
+      margin-bottom: 20px;
+    }
+    .overlay-content a {
+      display: inline-block;
+      padding: 10px 20px;
+      background: #5865f2;
+      color: #fff;
+      border-radius: 8px;
+      text-decoration: none;
+      font-weight: bold;
+      transition: background 0.2s ease;
+    }
+    .overlay-content a:hover {
+      background: #4752c4;
+    }
+  </style>
 </head>
 <body>
   <header class="navbar">
@@ -30,41 +77,28 @@
   </section>
 
   <main class="container">
+    <!-- Formular bleibt im Code, aber wird überdeckt -->
     <form id="applicationForm" class="form-card">
       <h2 class="form-title">Bewerbung</h2>
-
-      <label for="role">Bewerbung für:</label>
-      <select id="role" required>
-        <option value="">Bitte auswählen</option>
-      </select>
-
-      <label for="username">Roblox Username:</label>
-      <input type="text" id="username" placeholder="z.B. Max123" required>
-
-      <label for="discord">Discord Name:</label>
-      <input type="text" id="discord" placeholder="z.B. Max#1234" required>
-
-      <label for="age">Alter:</label>
-      <input type="number" id="age" min="10" max="99" placeholder="z.B. 16" required>
-
-      <label for="reason">Warum möchtest du ins Team?</label>
-      <textarea id="reason" placeholder="Schreibe hier deine Motivation..." required></textarea>
-
-      <div id="devUpload" class="hidden">
-        <label for="files">Beispiele / Bilder anhängen (nur für Developer):</label>
-        <input type="file" id="files" multiple accept="image/*">
-      </div>
-
-      <button type="submit" class="btn">Absenden</button>
-      <p id="statusMessage"></p>
+      <!-- Inhalte wie vorher ... -->
     </form>
   </main>
 
   <footer>
     <p>© 2025 Wiesbaden-RP | Made by <span class="lenny">Lenny</span></p>
   </footer>
+
+  <!-- Blur Overlay -->
+  <div class="overlay">
+    <div class="overlay-content">
+      <h2>⚠️ Bewerbung vorübergehend gesperrt</h2>
+      <p>
+        Aufgrund technischer Probleme ist das Bewerbungsformular momentan deaktiviert.<br>
+        Bitte erstelle dein Bewerbungsticket direkt in unserem Discord.
+      </p>
+      <a href="https://discord.gg/m9WrFk2DKS" target="_blank">Zum Ticket-System</a>
+    </div>
+  </div>
 </body>
 </html>
-
-
 
